<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="407dp"
        android:layout_height="274dp"
        android:scaleType="fitStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img" />

    <ImageView
        android:id="@+id/img_avatar"
        android:layout_width="98dp"
        android:layout_height="106dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:srcCompat="@drawable/img_second" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="200dp"
        android:layout_height="33dp"
        android:layout_marginTop="24dp"
        android:text="@string/dr_oleg_mayami"
        android:textColor="#121111"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.464"
        app:layout_constraintStart_toEndOf="@+id/img_avatar"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <ImageView
        android:id="@+id/line"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toEndOf="@+id/img_avatar"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@drawable/line" />

    <TextView
        android:id="@+id/dental_surgeon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/dental_surgeon"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/img_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.243"
        app:layout_constraintStart_toEndOf="@+id/img_avatar"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.565" />

    <TextView
        android:id="@+id/friendly_dr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_friendly_dental_friend"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/img_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.386"
        app:layout_constraintStart_toEndOf="@+id/img_avatar"
        app:layout_constraintTop_toBottomOf="@+id/dental_surgeon"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left"
        app:constraint_referenced_ids="friendly_dr"
        tools:layout_editor_absoluteX="171dp" />

    <ImageView
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="26dp"
        android:scaleType="fitStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_avatar"
        app:srcCompat="@drawable/img_1" />

    <ImageView
        android:id="@+id/mail_box"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:srcCompat="@drawable/box" />

    <ImageView
        android:id="@+id/net_img"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mail_box"
        app:srcCompat="@drawable/img_net" />

    <ImageView
        android:id="@+id/whats_img"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/net_img"
        app:srcCompat="@drawable/img_whats" />

    <ImageView
        android:id="@+id/phone_book"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/whats_img"
        app:srcCompat="@drawable/img_phone_book" />

    <ImageView
        android:id="@+id/location"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_book"
        app:srcCompat="@drawable/imglocation" />

    <TextView
        android:id="@+id/mail_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:text="@string/oleg_mayami93_gmail_com"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/mail_box"
        app:layout_constraintStart_toEndOf="@+id/mail_box"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/site_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:text="@string/www_dental_com"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/net_img"
        app:layout_constraintTop_toBottomOf="@+id/mail_text" />

    <TextView
        android:id="@+id/whats_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:text="@string/whatsapp_me"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/whats_img"
        app:layout_constraintTop_toBottomOf="@+id/net_img" />

    <TextView
        android:id="@+id/phone_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:text="@string/save_to_phonebook"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/phone_book"
        app:layout_constraintTop_toBottomOf="@+id/whats_img" />

    <TextView
        android:id="@+id/location_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:text="@string/abdumomunova_146"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/location"
        app:layout_constraintTop_toBottomOf="@+id/phone_text" />


</androidx.constraintlayout.widget.ConstraintLayout>